[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["polbb <paulbessone@gmail.com>"]
readme = "README.md"

# Add this section if it doesn't exist
packages = [
    { include = "webapp" }
]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
